--- a/pharma/templates/pharma/emp.html
+++ b/pharma/templates/pharma/emp.html
@@ -7,7 +7,14 @@
 
     <!-- Bootstrap 3 -->
     <link rel="stylesheet" href="{% static 'pharma/css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'pharma/css/bootstrap-theme.min.css' %}" />
+    <link
+      rel="stylesheet"
+      href="{% static 'pharma/css/bootstrap-theme.min.css' %}"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <!-- Custom inline style -->
     <style>
@@ -41,18 +48,18 @@
       .alert {
         border-radius: 8px;
       }
-      footer {
-        background: #2c3e50;
-        color: #ecf0f1;
-        padding: 25px 15px;
-        margin-top: 40px;
-      }
-      footer a {
+      /* Footer */
+      #contact a {
         color: #1abc9c;
-        transition: 0.3s;
+        font-size: 22px;
+        margin: 0 12px;
+        display: inline-block;
+        transition: transform 0.3s, color 0.3s, text-shadow 0.3s;
       }
-      footer a:hover {
+      #contact a:hover {
         color: #16a085;
+        transform: scale(1.4) rotate(10deg);
+        text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
         text-decoration: none;
       }
     </style>
@@ -61,19 +68,26 @@
     <script src="{% static 'pharma/js/jquery.js' %}"></script>
     <script src="{% static 'pharma/js/bootstrap.min.js' %}"></script>
 
-    <title>Add / Update Employee</title>
+    <title>Add Employee Details</title>
   </head>
   <body>
-    {% if messages %}
-      {% for message in messages %}
-        <div class="alert alert-success alert-dismissible fade in container" role="alert" style="margin-top: 15px">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          {{ message }}
-        </div>
-      {% endfor %}
-    {% endif %}
+    {% if messages %} {% for message in messages %}
+    <div
+      class="alert alert-success alert-dismissible fade in container"
+      role="alert"
+      style="margin-top: 15px"
+    >
+      <button
+        type="button"
+        class="close"
+        data-dismiss="alert"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+      {{ message }}
+    </div>
+    {% endfor %} {% endif %}
 
     <!-- Navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -82,7 +96,12 @@
           <a href="/pharma/" class="navbar-brand">
             <span class="glyphicon glyphicon-home"></span> HOME
           </a>
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#thisnav">
+          <button
+            type="button"
+            class="navbar-toggle"
+            data-toggle="collapse"
+            data-target="#thisnav"
+          >
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -93,10 +112,12 @@
           <ul class="nav navbar-nav">
             <!-- Dealer Management -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dealer Management <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                >Dealer Management <b class="caret"></b
+              ></a>
               <ul class="dropdown-menu">
                 {% if user.is_authenticated and user.role == "admin" %}
-                  <li><a href="/pharma/dealerform/">Add Dealer Details</a></li>
+                <li><a href="/pharma/dealerform/">Add Dealer Details</a></li>
                 {% endif %}
                 <li><a href="/pharma/dealertable/">View Dealer Details</a></li>
               </ul>
@@ -104,7 +125,9 @@
 
             <!-- Medicine Management -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Medicine Management <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                >Medicine Management <b class="caret"></b
+              ></a>
               <ul class="dropdown-menu">
                 <li><a href="/pharma/medform/">Add Medicine Details</a></li>
                 <li><a href="/pharma/medtable/">View Medicine Details</a></li>
@@ -113,10 +136,12 @@
 
             <!-- Employee Management -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Employee Management <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                >Employee Management <b class="caret"></b
+              ></a>
               <ul class="dropdown-menu">
                 {% if user.is_authenticated and user.role == "admin" %}
-                  <li><a href="/pharma/empform/">Add Employee Details</a></li>
+                <li><a href="/pharma/empform/">Add Employee Details</a></li>
                 {% endif %}
                 <li><a href="/pharma/emptable/">View Employee Details</a></li>
               </ul>
@@ -124,7 +149,9 @@
 
             <!-- Customer Management -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Customer Management <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                >Customer Management <b class="caret"></b
+              ></a>
               <ul class="dropdown-menu">
                 <li><a href="/pharma/custform/">Add Customer Details</a></li>
                 <li><a href="/pharma/custtable/">View Customer Details</a></li>
@@ -133,7 +160,9 @@
 
             <!-- Purchase Information -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Purchase Information <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                >Purchase Information <b class="caret"></b
+              ></a>
               <ul class="dropdown-menu">
                 <li><a href="/pharma/purchaseform/">New Purchase</a></li>
                 <li><a href="/pharma/purchasetable/">View All Purchases</a></li>
@@ -144,10 +173,10 @@
           <!-- Right side -->
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
-              <li><a>Welcome, {{ user.username }}!</a></li>
-              <li><a href="{% url 'logout' %}">Logout</a></li>
+            <li><a>Welcome, {{ user.username }}!</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
             {% else %}
-              <li><a href="{% url 'login' %}">Login</a></li>
+            <li><a href="{% url 'login' %}">Login</a></li>
             {% endif %}
           </ul>
         </div>
@@ -159,7 +188,10 @@
       <div class="col-md-2"></div>
       <div class="panel panel-default col-md-8">
         <div class="panel-heading">
-          <h1>{% if add %} Add Employee Details {% else %} Update Employee Details {% endif %}</h1>
+          <h1>
+            {% if add %} Add Employee Details {% else %} Update Employee Details
+            {% endif %}
+          </h1>
         </div>
         <div class="panel-body">
           {% if emp %}
@@ -169,19 +201,39 @@
 
             <div class="row padtop15">
               <div class="col-md-3 padtop5">
-                <label for="empname" class="form-control-label">Employee Name:</label>
+                <label for="empname" class="form-control-label"
+                  >Employee Name:</label
+                >
               </div>
               <div class="form-group col-md-8">
-                <input type="text" class="form-control" name="empname" id="empname" placeholder="Employee Name" value="{{ emp.empname|default:'' }}" required />
+                <input
+                  type="text"
+                  class="form-control"
+                  name="empname"
+                  id="empname"
+                  placeholder="Employee Name"
+                  value="{{ emp.empname|default:'' }}"
+                  required
+                />
               </div>
             </div>
 
             <div class="row padtop5">
               <div class="col-md-3 padtop5">
-                <label for="emprole" class="form-control-label">Employee Role:</label>
+                <label for="emprole" class="form-control-label"
+                  >Employee Role:</label
+                >
               </div>
               <div class="form-group col-md-8">
-                <input type="text" class="form-control" name="emprole" id="emprole" placeholder="Employee Role" value="{{ emp.emprole|default:'' }}" required />
+                <input
+                  type="text"
+                  class="form-control"
+                  name="emprole"
+                  id="emprole"
+                  placeholder="Employee Role"
+                  value="{{ emp.emprole|default:'' }}"
+                  required
+                />
               </div>
             </div>
 
@@ -190,7 +242,15 @@
                 <label for="empemail" class="form-control-label">Email:</label>
               </div>
               <div class="form-group col-md-8">
-                <input type="email" class="form-control" name="empemail" id="empemail" placeholder="Email" value="{{ emp.empemail|default:'' }}" required />
+                <input
+                  type="email"
+                  class="form-control"
+                  name="empemail"
+                  id="empemail"
+                  placeholder="Email"
+                  value="{{ emp.empemail|default:'' }}"
+                  required
+                />
               </div>
             </div>
 
@@ -199,7 +259,15 @@
                 <label for="empphn" class="form-control-label">Phone No:</label>
               </div>
               <div class="form-group col-md-8">
-                <input type="text" class="form-control" name="empphn" id="empphn" placeholder="Contact Number" value="{{ emp.empphn|default:'' }}" required />
+                <input
+                  type="text"
+                  class="form-control"
+                  name="empphn"
+                  id="empphn"
+                  placeholder="Contact Number"
+                  value="{{ emp.empphn|default:'' }}"
+                  required
+                />
               </div>
             </div>
 
@@ -210,10 +278,16 @@
                 <a href="/pharma/" class="btn btn-default">Cancel</a>
               </div>
               <div class="col-md-2 padtop15">
-                <button type="submit" class="btn btn-primary">Update Record</button>
+                <button type="submit" class="btn btn-primary">
+                  Update Record
+                </button>
               </div>
               <div class="col-md-2 padtop15">
-                <a href="/pharma/empformdelete/{{ emp.id }}/" class="btn btn-danger">Delete Record</a>
+                <a
+                  href="/pharma/empformdelete/{{ emp.id }}/"
+                  class="btn btn-danger"
+                  >Delete Record</a
+                >
               </div>
             </div>
           </form>
@@ -225,19 +299,37 @@
 
             <div class="row padtop15">
               <div class="col-md-3 padtop5">
-                <label for="empname" class="form-control-label">Employee Name:</label>
+                <label for="empname" class="form-control-label"
+                  >Employee Name:</label
+                >
               </div>
               <div class="form-group col-md-8">
-                <input type="text" class="form-control" name="empname" id="empname" placeholder="Employee Name" required />
+                <input
+                  type="text"
+                  class="form-control"
+                  name="empname"
+                  id="empname"
+                  placeholder="Employee Name"
+                  required
+                />
               </div>
             </div>
 
             <div class="row padtop5">
               <div class="col-md-3 padtop5">
-                <label for="emprole" class="form-control-label">Employee Role:</label>
+                <label for="emprole" class="form-control-label"
+                  >Employee Role:</label
+                >
               </div>
               <div class="form-group col-md-8">
-                <input type="text" class="form-control" name="emprole" id="emprole" placeholder="Employee Role" required />
+                <input
+                  type="text"
+                  class="form-control"
+                  name="emprole"
+                  id="emprole"
+                  placeholder="Employee Role"
+                  required
+                />
               </div>
             </div>
 
@@ -246,7 +338,14 @@
                 <label for="empemail" class="form-control-label">Email:</label>
               </div>
               <div class="form-group col-md-8">
-                <input type="email" class="form-control" name="empemail" id="empemail" placeholder="Email" required />
+                <input
+                  type="email"
+                  class="form-control"
+                  name="empemail"
+                  id="empemail"
+                  placeholder="Email"
+                  required
+                />
               </div>
             </div>
 
@@ -255,7 +354,14 @@
                 <label for="empphn" class="form-control-label">Phone No:</label>
               </div>
               <div class="form-group col-md-8">
-                <input type="text" class="form-control" name="empphn" id="empphn" placeholder="Contact Number" required />
+                <input
+                  type="text"
+                  class="form-control"
+                  name="empphn"
+                  id="empphn"
+                  placeholder="Contact Number"
+                  required
+                />
               </div>
             </div>
 
@@ -266,7 +372,9 @@
                 <a href="/pharma/" class="btn btn-default">Cancel</a>
               </div>
               <div class="col-md-2 padtop15">
-                <button type="submit" class="btn btn-primary">Add Record</button>
+                <button type="submit" class="btn btn-primary">
+                  Add Record
+                </button>
               </div>
             </div>
           </form>
@@ -276,16 +384,17 @@
     </div>
 
     <!-- Footer -->
-    <footer id="contact" class="container-fluid text-center">
-      <div class="row">
-        <div class="left-footer col-lg-6">
-          <span class="footer-text">
-            <strong>Do you have any queries? Contact us via </strong>
-            <a href="mailto:abirha3896@gmail.com" style="color: #0057b5; text-decoration: underline"><strong>Email</strong></a>, 
-            or 
-            <a href="https://wa.me/8801701554707" target="_blank" style="color: #25D366; text-decoration: underline"><strong>WhatsApp us</strong></a>.
-          </span>
-        </div>
+   <footer id="contact" class="bg-light py-3 text-center fixed-bottom">
+      <div class="container">
+        <span class="footer-text">
+          <strong>Do you have any queries? Contact us via </strong></br>
+          <a href="mailto:abirha3896@gmail.com" class="mx-2" title="Email">
+            <i class="fa fa-envelope fa-lg" style="color: #d35400"></i>
+          </a>
+          <a href="https://wa.me/8801701554707" target="_blank" class="mx-2" title="WhatsApp">
+           <i class="fa fa-whatsapp fa-lg" style="color: #25d366"></i>
+          </a>
+        </span>
       </div>
     </footer>
   </body>
